<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mislugares.MainActivity"
    tools:showIn="@layout/activity_main"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/t_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edicion_nombre"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_nombre"
            android:hint="@string/edicion_nombre_hint" >
            <requestFocus/>
        </EditText>
        <TextView
            android:id="@+id/t_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nombre"
            android:text="Tipo:"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <Spinner
            android:id="@+id/tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/t_tipo"
            android:layout_toRightOf="@id/t_tipo" />
        <TextView
            android:id="@+id/t_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_tipo"
            android:text="@string/edicion_direccion"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:id="@+id/direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_direccion"
            android:hint="@string/edicion_direccion_hint"
            android:inputType="textPostalAddress" />
        <TextView
            android:id="@+id/t_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/direccion"
            android:text="@string/edicion_telefono"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/t_telefono"
            android:layout_alignTop="@id/t_telefono"
            android:hint="@string/edicion_telefono_hint"
            android:inputType="phone" />
        <TextView
            android:id="@+id/t_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/telefono"
            android:text="@string/edicion_url"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_url"
            android:hint="@string/edicion_url_hint"
            android:inputType="textUri" />
        <TextView
            android:id="@+id/t_comentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/url"
            android:text="@string/edicion_comentario"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:id="@+id/comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_comentario"
            android:hint="@string/edicion_comentario_hint"
            android:inputType="textMultiLine" />
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>